# learn-opengl

./: .gitignore  README.md  centos7配置opengl环境.md
notes/: basis.md
test_example/: CMakeLists.txt  main.cc
theory/: 01.md
vs_projects/ch01/test_opengl/: main.cpp
